--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,9 @@
     <string name="permission_tv">请开启本软件使用所需的手机权限，否则软件无法正常使用。基础使用需开启的手机权限为：定位、拨打电话、发送短信、读写手机存储、获取手机信息。</string>
     <string name="permission_btn1">设置手机权限</string>
     <string name="permission_btn2">设置自启动管理</string>
-    
+
+    <string name="version_info">一键呼救 1.0.0(beta)</string>
     <string name="company_info">By LFChicken (2018)</string>
-    
-    <string name="register_1">请输入您的手机号。该手机号作为救助时的联系电话，请务必保证有效。</string>
-    <string name="register_2">注册成功成为用户后，即默认同意 使用条例。</string>
 
     <string name="login_1">请输入您的手机号。该手机号作为救助时的联系电话，请务必保证有效。</string>
     <string name="login_2">注册成功成为用户后，即默认同意 使用条例。</string>
@@ -40,4 +38,14 @@
         &#x00A0;&#x00A0;&#x00A0;&#x00A0;&#x00A0;&#x00A0;
         设想一下，假如你遭遇了一场车祸，大腿血流如注，你拨打了120后，尚可以通过点击一键呼救“严重外伤”按钮来通知周围的医生和志愿者来帮助你。
         时间就是生命，在120未到达之前或在送往医院的路上，若能得到附近医务人员或医疗志愿者的救助支持，就能在生死线上多获取一丝希望。又如，商场逛街时有人突然晕倒（如心脏病），而你又不具备急救知识，你可以在拨打120的同时，按下一键呼救“突发晕厥”，便能得到附近医护人员及志愿者的帮助。\n</string>
+    <string name="try_welcome_text">试用账号</string>
+    <string name="login_welcome_text">手机号验证码登录</string>
+    <string name="weChat_welcome_text">微信登录</string>
+    <string name="about_title">关于软件</string>
+    <string name="sos_title">求救信息列表</string>
+    <string name="no_event_sos">- 暂无事件 -</string>
+    <string name="login_title">登录</string>
+    <string name="feedback_title">反馈</string>
+    <string name="help_title">帮助说明</string>
+    <string name="logout_title">退出登录</string>
 </resources>
